# gemma4_pytorch_codex

./: .gitignore  AGENTS.md  COMPARE.md  README.md  audio.py  config.py  layers.py  model.py  pyproject.toml  text.py  tokenizer.py  vision.py
src/gemma4/: __init__.py  audio.py  config.py  convert.py  layers.py  model.py  text.py  tokenizer.py  vision.py
src/gemma4_pt_codex/: __init__.py  audio.py  audio_processing.py  config.py  convert.py  image_processing.py  layers.py  model.py  module_utils.py  processing.py  text.py  tokenizer.py  vision.py
tests/: test_audio_processing.py  test_configs_and_layers.py  test_conversion.py  test_image_processing.py  test_jax_parity.py  test_smoke.py
